JDBC-5126 Vector toolbox (cleanup - shared task status / pipeline step forms)